--- a/styles.css
+++ b/styles.css
@@ -66,11 +66,31 @@ h1, h2, h3, h4, h5, h6, p {
     text-align: center;
 }
 
-.banner_text {
-    padding: 40px;
-    padding-top: 200px;
-    font-size: 25px;
-}
+    .banner_text {
+        padding: 40px;
+        padding-top: 200px;
+        font-size: 25px;
+    }
+    .banner_text h1 {
+        text-shadow: 0 0 10px rgba(13, 64, 75, 0.8), 0 0 20px rgba(50, 137, 168, 0.999), 0 0 30px rgba(255, 255, 255, 0.4);
+    }
+    .banner_text h1, p {
+        margin-bottom: 10px;
+    }
+    
+    
+    .banner_button {
+        margin-top: 20px;
+        padding: 8px;
+        border-radius: 10px;
+        border: white 1px solid;
+        color: white;
+        background: linear-gradient(180deg, rgb(110, 193, 231), rgb(24, 55, 110));
+        cursor: pointer;
+        font-size: 16px;
+        
+    }
+    
 .banner_text h1 {
     text-shadow: 0 0 10px rgba(13, 64, 75, 0.8), 0 0 20px rgba(50, 137, 168, 0.999), 0 0 30px rgba(255, 255, 255, 0.4);
 }
@@ -90,6 +110,29 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 16px;
     
 }
+
+.arrow-container {
+    background: linear-gradient(180deg, rgb(110, 193, 231), rgb(24, 55, 110));
+    border-radius: 1100px;
+
+animation: floatAnimation 1.8s ease-in-out infinite;
+}
+
+
+@keyframes floatAnimation {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+
+
 
 /* OM MIG SECTION */
 
@@ -112,7 +155,6 @@ h1, h2, h3, h4, h5, h6, p {
 
 .about-text {
     background: linear-gradient(40deg, rgb(5, 21, 55), rgb(103, 149, 171));
-    border: solid 1px black;
     border-radius: 15px;
     height: 80px;
     width: 500px;
@@ -145,6 +187,7 @@ h1, h2, h3, h4, h5, h6, p {
     margin-top: 50px;
     margin-left: 100px;
     text-align: center;
+    align-items: center;
     gap: 40px;
 }
 
@@ -153,31 +196,16 @@ h1, h2, h3, h4, h5, h6, p {
   font-size: 35px;
 }
 
+
+
 .logo-item {
     background: linear-gradient(180deg, rgb(5, 21, 55), rgb(103, 149, 171));
-    border-radius: 45px;
-    width: 100px;
-    height: 100px;
+    border-radius: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-
-
-
-/* FOOTER */
-
-footer {
-    background: linear-gradient(180deg, rgb(24, 55, 110), rgb(5, 21, 55));
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
-
-.logo-item {
-    width: 50px;
-    height: 50px;
+    width: 110px;
+    height: 110px;
     background-color: #3498db;
     margin: 10px;
     float: left; 
@@ -199,3 +227,14 @@ footer {
     }
   }
   
+
+
+/* FOOTER */
+
+footer {
+    background: linear-gradient(180deg, rgb(24, 55, 110), rgb(5, 21, 55));
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
