--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,8 @@ animation: floatAnimation 1.5s ease-in-out infinite;
 
 /* OM MIG SECTION */
 
-.section-om-mig,
-.section-skills {
+.section-om-mig {
+    border-top: #3498db 1px solid;
     margin-bottom: 60px;
 }
 
@@ -169,6 +169,9 @@ animation: floatAnimation 1.5s ease-in-out infinite;
 .section-skills {
  display: flex;
  justify-content: space-evenly;
+ border-top: #3498db 1px solid;
+ height: 500px;
+ padding-top: 30px;
 }
 
 .skills-logos {
@@ -180,7 +183,7 @@ animation: floatAnimation 1.5s ease-in-out infinite;
     gap: 40px;
 }
 
-.skills h2 {
+.skills h2, .projects-container h2 {
   text-align: justify;
   font-size: 35px;
   margin-left: 200px;
@@ -217,6 +220,14 @@ animation: floatAnimation 1.5s ease-in-out infinite;
     }
   }
   
+  /*PROJECTS*/
+.projects-items{
+    display: grid;
+    grid-template-rows: 200px 200px;
+    grid-template-columns:200px 200px;
+    gap: 70px;
+}
+
 
   /*Sista section*/
   .last-section {
