--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -46,13 +48,14 @@ h1, h2, h3, h4, h5, h6, p {
 .navi a {
     text-decoration: none;
     color: white;
-    text-shadow: 0 0 10px blue;
+    text-shadow: 0 0 10px rgb(0, 0, 0);
     border: 1px solid white;
     border-radius: 20px;
     padding: 10px;
     font-size: 18px;
     font-weight: 600;
     margin-right: 20px;
+    transition: ease-in 1s ;
 }
 
 /* BANNER */
@@ -65,47 +68,53 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     color: white;
     text-align: center;
     opacity: 0.8;
+    margin-top: 80px;
 }
 
 .banner_text {
-        padding: 40px;
-        padding-top: 200px;
-        font-size: 25px;
+        text-align: justify;
+        font-family: 'Poppins', sans-serif;
+        max-width: 800px;
+        margin-bottom: 30px;
     }
     
 .banner_text h1 {
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.8), 0 0 20px rgba(0, 0, 0, 0.999), 0 0 30px rgba(0, 0, 0, 0.4);
-padding-top: 8%;
 color: white;
-
+font-size: 50px;
 }
-.banner_text h1, p {
-    margin-bottom: 10px;
+.banner_text h3 {
+    font-size: 35px;
+    color: #3498db;
 }
-
+.banner_text p {
+    font-size: 20px;
+}
 
 .banner_button {
-    margin: 20px;
+    margin-right: 25px;
     padding: 13px;
     border-radius: 30px;
     border: white 1px solid;
     color: white;
     background: transparent;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 17px;
     box-shadow: 0 0 10px rgb(255, 255, 255);
-    
+}
+
+.btn-banner-container, .banner_text {
+    margin-left: 100px;
 }
 
 
 /* OM MIG SECTION */
 
 .section-om-mig {
-    border-top: #3498db 1px solid;
     margin-bottom: 60px;
 }
 
@@ -125,8 +134,6 @@ color: white;
 .about-text {
     background: linear-gradient(40deg, rgb(5, 21, 55), rgb(103, 149, 171));
     border-radius: 15px;
-    height: 80px;
-    width: 500px;
     margin-bottom: 10px;
     padding: 15px;
 }
