--- a/contact.css
+++ b/contact.css
@@ -50,3 +50,61 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight: 600;
     margin-right: 20px;
 }
+
+
+.form-section {
+    background-image: url(/img/banner.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    opacity: 0.8;
+}
+
+.form-section h2 {
+font-size: 35px;
+margin-bottom: 30px;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background: linear-gradient(180deg, rgb(24, 55, 110), rgb(5, 21, 55));
+    opacity: 0.8;
+    text-align: justify;
+    max-width: 600px;
+    height: 400px;
+    border-radius: 20px;
+}
+
+input, textarea {
+    border-radius: 10px;
+    padding: 5px;
+    margin: 10px;
+    border: black 1px solid;
+    box-shadow: 0 0 10px black;
+}
+
+button {
+    margin-right: 25px;
+    padding: 10px;
+    border-radius: 18px;
+    border: white 1px solid;
+    color: white;
+    background: transparent;
+    cursor: pointer;
+    font-size: 15px;
+    box-shadow: 0 0 10px black;
+}
+
+button:hover {
+    background-color: #04AA6D;
+    color: black;
+    box-shadow: none;
+    border: none;
+}
