--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,11 @@
 
 h1, h2, h3, h4, h5, h6, p {
     color: white;
+    text-shadow: 0 0 20px rgb(0, 0, 0);
+    
 }
 
-.main {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background: linear-gradient(180deg, rgb(24, 55, 110), rgb(5, 21, 55));
-}
+
 
 .header {
     background: transparent;
@@ -30,6 +27,8 @@ h1, h2, h3, h4, h5, h6, p {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     align-items: center;
+    top: 0px; 
+    z-index: 1;
 }
 
 .header_logo {
@@ -40,12 +39,12 @@ h1, h2, h3, h4, h5, h6, p {
     text-decoration: none;
 }
 
-.navi {
+nav {
     display: flex;
     align-items: center;
 }
 
-.navi a {
+nav a {
     text-decoration: none;
     color: white;
     text-shadow: 0 0 10px rgb(0, 0, 0);
@@ -57,13 +56,19 @@ h1, h2, h3, h4, h5, h6, p {
     transition: ease-in 1s ;
 }
 
+.main {
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(150deg, rgb(28, 58, 109), rgb(5, 21, 55));
+}
+
 /* BANNER */
 
 .banner {
     background-image: url(/img/banner.jpg);
     background-attachment: fixed;
     background-size: cover;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -71,7 +76,6 @@ h1, h2, h3, h4, h5, h6, p {
     color: white;
     text-align: center;
     opacity: 0.8;
-    margin-top: 80px;
 }
 
 .banner_text {
@@ -80,9 +84,6 @@ h1, h2, h3, h4, h5, h6, p {
         max-width: 800px;
         margin-bottom: 30px;
     }
-.banner_text h1, h3, p {
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8), 0 0 20px rgba(0, 0, 0, 0.999), 0 0 30px rgba(0, 0, 0, 0.4);
-}
 
 .banner_text h1 {
 color: white;
@@ -116,12 +117,16 @@ font-size: 50px;
 /* OM MIG SECTION */
 
 .section-om-mig {
-    margin-bottom: 60px;
+    background-image: url(/img/banner.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    padding-bottom: 100px;
 }
 
 .section-om-mig h2 {
     margin-left: 200px;
-    margin-top: 40px;
     font-size: 35px;
 }
 
@@ -129,7 +134,6 @@ font-size: 50px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-top: 40px;
 }
 
 .about-text {
@@ -154,23 +158,17 @@ font-size: 50px;
     border-radius: 200px;
 }
 
-
- .middle-section{
-    background-image: url(/img/banner.jpg);
-    height: 280px;
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.6;
- }
 /* SKILLS */
 
 .section-skills {
  display: flex;
  justify-content: space-evenly;
  height: 800px;
- padding-top: 70px;
- 
+ background-image: url(/img/banner.jpg);
+ background-attachment: fixed;
+ background-size: cover;
+ background-repeat: no-repeat;
+ opacity: 0.8;
 }
 
 .skills-logos {
@@ -180,14 +178,12 @@ font-size: 50px;
     gap: 60px;
 }
 
-.skills h3{
+.section-skills h3{
   font-size: 35px;
   text-align: center;
   padding: 20px;
 
 }
-
-
 
 .logo-item {
     background: linear-gradient(5deg, rgb(5, 21, 55), rgb(103, 149, 171));
@@ -233,17 +229,23 @@ font-size: 50px;
 footer {
     background: linear-gradient(180deg, rgb(24, 55, 110), rgb(5, 21, 55));
     color: white;
-    text-align: center;
     width: 100%;
+    height: 230px;
     padding: 10px;
     font-size: 15px;
     padding-top: 60px;
+    align-items: center;
+
 }
 
-.footer-content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 15px;
-    align-items: center;
-    
+.social-media-container  {
+    text-align: center;
+    padding-bottom: 20px;
+}
+.social-media-container h3 {
+    margin-bottom: 10px;
+}
+.rights-container {
+   text-align: center;
+   font-size: 13px;
 }
