--- a/contact.css
+++ b/contact.css
@@ -58,7 +58,7 @@ h1, h2, h3, h4, h5, h6, p {
     background-size: cover;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     color: white;
@@ -73,21 +73,23 @@ margin-bottom: 30px;
 .form-container {
     display: flex;
     justify-content: center;
-    padding: 20px;
+    padding: 30px;
     background: linear-gradient(180deg, rgb(24, 55, 110), rgb(5, 21, 55));
     opacity: 0.8;
     text-align: justify;
-    max-width: 600px;
-    height: 400px;
+    width: 50%;
+    height: auto;
     border-radius: 20px;
 }
 
 input, textarea {
     border-radius: 10px;
+    box-sizing: border-box;
     padding: 5px;
     margin: 10px;
     border: black 1px solid;
     box-shadow: 0 0 10px black;
+    width: 100%;
 }
 
 button {
