--- a/projects.css
+++ b/projects.css
@@ -52,6 +52,12 @@ h1, h2, h3, h4, h5, h6, p {
     margin-right: 20px;
 }
 
+
+h2 {
+    text-align: center;
+    padding: 100px;
+}
+
 /*CARDS*/
 
 
@@ -59,6 +65,7 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     justify-content: center;
     align-items: center;
+   padding-bottom: 100px;
    
 }
 .card {
@@ -77,8 +84,6 @@ h1, h2, h3, h4, h5, h6, p {
 .card .content {
     padding: 20px;
 }
-
-
 
 /*FOOOOTER*/
 .social-logos {
