--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,8 @@ font-size: 50px;
     font-size: 20px;
 }
 
-.banner_button {
+.btn-contact, 
+.btn-download {
     margin-right: 25px;
     padding: 13px;
     border-radius: 30px;
@@ -112,7 +113,10 @@ font-size: 50px;
 .btn-banner-container, .banner_text {
     margin-left: 100px;
 }
-
+.btn-banner-container a {
+    text-decoration: none;
+    color: white;
+}
 
 /* OM MIG SECTION */
 
