--- a/styles.css
+++ b/styles.css
@@ -42,10 +42,11 @@ h1, h2, h3, h4, h5, h6, p {
 nav {
     display: flex;
     align-items: center;
+    
 }
 
 nav a {
-    text-decoration: none;
+   text-decoration: none;
     color: white;
     text-shadow: 0 0 10px rgb(0, 0, 0);
     border-radius: 20px;
@@ -53,7 +54,11 @@ nav a {
     font-size: 18px;
     font-weight: 600;
     margin-right: 20px;
-    transition: ease-in 1s ;
+    transition: ease-in 0.8s ;
+    
+}
+nav a:hover {
+color: #3498db;
 }
 
 .main {
