--- a/styles.css
+++ b/styles.css
@@ -259,8 +259,73 @@ footer {
    font-size: 13px;
 }
 
-@media (min-width: 481px) and (max-width:768px){
-
-
+@media (max-width:768px) and (min-width: 481px){
+      
+        .banner {
+          height: 100vh; 
+        }
+      
+        .banner_text {
+          padding: 0 10px 0 10px;
     
+        }
+        .banner_text h1 {
+            font-size: 35px;
+            }
+            .banner_text h3 {
+             font-size: 25px;
+             color: #3498db;   
+            }
+            .banner_text p {
+                font-size: 15px;
+            }
+      
+        .btn-banner-container,
+        .banner_text {
+          margin-left: 10px; 
+        }
+        
+.btn-contact, 
+.btn-download {
+    padding: 10px;
+    font-size: 15px;
+    margin-left: 10px;
+}
+/* OM MIG SECTION */
+
+.section-om-mig h2 {
+    margin-left: 100px;
+    font-size: 35px;
+}
+
+.container-om-mig {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.about-text {
+    background: linear-gradient(90deg, rgb(5, 21, 55), rgb(103, 149, 171));
+    border-radius: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+    max-width: 800px;
+}
+
+.textos-om-mig h3 {
+    margin-bottom: 5px;
+}
+
+
+.textos-om-mig p {
+    margin-bottom: 15px;
+}
+
+.img-about-me {
+    width: 250px;
+}
+
+
 }
