--- a/styles.css
+++ b/styles.css
@@ -260,9 +260,12 @@ footer {
 }
 
 @media (max-width:768px) and (min-width: 481px){
+
+
+
       
         .banner {
-          height: 100vh; 
+          height: 100vh;
         }
       
         .banner_text {
@@ -300,8 +303,6 @@ footer {
 
 .container-om-mig {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     flex-direction: column;
     padding: 15px;
 }
@@ -310,22 +311,57 @@ footer {
     background: linear-gradient(90deg, rgb(5, 21, 55), rgb(103, 149, 171));
     border-radius: 30px;
     margin-bottom: 30px;
-    padding: 20px;
-    max-width: 800px;
+    padding: 15px;
+    max-width: 760px;
+    font-size: 15px;
 }
-
-.textos-om-mig h3 {
-    margin-bottom: 5px;
-}
-
 
 .textos-om-mig p {
-    margin-bottom: 15px;
+    margin-bottom: 0;
 }
 
 .img-about-me {
     width: 250px;
+} 
+
+
+/*Skills*/
+   .skills-logos {
+       display: grid;
+       grid-template-columns: 40px 40px 40px 40px;
+       gap: 60px;
+   }
+   
+   .section-skills h3{
+     font-size: 25px;
+     text-align: center;
+     padding: 0;
+   
+   }
+   
+   .logo-item {
+    width: 90px;
+       height: 90px;
+
+
+}
+.logos-img {
+    width: 40px;
 }
 
 
+
+nav {
+    display: flex;
+    width: 100%;
+    
+}
+
+nav a {
+    
+    padding: 5px;
+    font-size: 15px;
+    margin-right: 5px;
+    
+}
 }
