--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ font-size: 50px;
     background-repeat: no-repeat;
     opacity: 0.8;
     padding-bottom: 100px;
+    padding: 100px;
 }
 
 .section-om-mig h2 {
